--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "symfony/finder": "~2.5"
+        "symfony/finder": "~2.5",
+        "symfony/yaml": "~2.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3",
